--- a/expense.html
+++ b/expense.html
@@ -19,10 +19,12 @@
         <label for="category">Choose A Category: </label><br>
         <select name="category" id="category" required>
             <option value="None" selected>None</option>
-            <option value="fees">Education Fees</option>
+            <option value="Eduction Fees">Education Fees</option>
             <option value="Movies">Movies</option>
             <option value="Food">Food</option>
             <option value="Travel">Travel</option>
+            <option value="Fuel">Fuel</option>
+            <option value="Others">Others</option>
           </select>
 
         <h4><button>Add Expense</button></h4>
@@ -31,8 +33,10 @@
 
     <ul id='listOfUsers'> </ul>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.26.1/axios.min.js"></script>
+
     <script>
-function saveData(event){
+    function saveData(event){
     event.preventDefault();
     const amount = event.target.amount.value;
     const desc = event.target.desc.value;
@@ -44,50 +48,62 @@ function saveData(event){
         category
     }
 
-    localStorage.setItem(obj.amount,JSON.stringify(obj))
-    showNewUsersOnScreen(obj)
+    axios.post('https://crudcrud.com/api/24606079701240da8ef2ec93c6d6caf8/expenseData',obj)
+    .then(response=>{
+        showNewUsersOnScreen(response.data);
+        console.log(response);
+    })
+    .catch((err)=>{
+       console.log(err);
+    })
 
 }
 
   window.addEventListener("DOMContentLoaded", ()=>{
-      const localStorageObj= localStorage;
-      const localStoragekeys=Object.keys(localStorageObj);
-
-      for(let i=0;i<localStoragekeys.length;i++){
-          const key = localStoragekeys[i];
-          const userDetailsString= localStorageObj[key];
-          const userDetailsObj=JSON.parse(userDetailsString);
-          showNewUsersOnScreen(userDetailsObj)
-      }
+    axios.get('https://crudcrud.com/api/24606079701240da8ef2ec93c6d6caf8/expenseData')
+      .then((response)=>{
+          console.log(response);
+          for(var i=0;i<response.data.length;i++){
+              showNewUsersOnScreen(response.data[i]);
+          }
+      })
+      .catch((err)=>{
+      console.log(err);
+      })
   })
 
 
 function showNewUsersOnScreen(user){
-    if(localStorage.getItem(user.amount)!==null){
-        removeUserFromScreen(user.amount)
+    if(localStorage.getItem(user._id)!==null){
+        removeUserFromScreen(_id)
         }
     const parentNode= document.getElementById('listOfUsers');
-    const childHTMl= `<li id =${user.amount}> ${user.amount}--${user.desc}--${user.category}
-        <button onclick=editUser('${user.amount}','${user.desc}','${user.category}')>Edit Expense</button>
-         <button onclick=deleteUser('${user.amount}')>Delete Expense</button></li>`
+    const childHTMl= `<li id =${user._id}> ${user.amount}--${user.desc}--${user.category}
+        <button onclick=editUser('${user.amount}','${user.desc}','${user.category}','${user._id}')>Edit Expense</button>
+         <button onclick=deleteUser('${user._id}')>Delete Expense</button></li>`
     parentNode.innerHTML= parentNode.innerHTML + childHTMl;
     console.log(parentNode.innerHTML);
 }
 
-function deleteUser(amount) {
-    localStorage.removeItem(amount)
-    removeItemFromScreen(amount)
+function deleteUser(_id) {
+    axios.delete(`https://crudcrud.com/api/24606079701240da8ef2ec93c6d6caf8/expenseData/${_id}`)
+        .then((res)=>{
+            removeUserFromScreen(_id)
+        })
+        .catch((err)=>{
+            console.log(err);
+        })
 }
-function editUser(amount,desc,category){
+function editUser(amount,desc,category,_id){
         document.getElementById("amount").value = amount;
         document.getElementById("desc").value = desc;
         document.getElementById("category").value = category;
-        deleteUser(amount);
+        deleteUser(_id);
 }
 
-function removeUserFromScreen(amount){
+function removeUserFromScreen(_id){
     const parentNode=document.getElementById('listOfUsers');
-    const childToBeDeleted = document.getElementById(amount);
+    const childToBeDeleted = document.getElementById(_id);
     if(childToBeDeleted){
         parentNode.removeChild(childToBeDeleted);
     }
