--- a/expense.html
+++ b/expense.html
@@ -19,7 +19,7 @@
         <label for="category">Choose A Category: </label><br>
         <select name="category" id="category" required>
             <option value="None" selected>None</option>
-            <option value="Eduction Fees">Education Fees</option>
+            <option value="Education Fees">Education Fees</option>
             <option value="Movies">Movies</option>
             <option value="Food">Food</option>
             <option value="Travel">Travel</option>
@@ -36,7 +36,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.26.1/axios.min.js"></script>
 
     <script>
-    function saveData(event){
+  async  function saveData(event){
+      try{
     event.preventDefault();
     const amount = event.target.amount.value;
     const desc = event.target.desc.value;
@@ -47,53 +48,42 @@
         desc,
         category
     }
+    const newData = await axios.post('https://crudcrud.com/api/448df21edc234a0b807c1dc631990592/expenseData',obj)
+        showNewUsersOnScreen(newData.data);
+        console.log(newData);
+    }
+    catch(err){
+        console.log("Something went wrong",err);
+    }
+  }
 
-    axios.post('https://crudcrud.com/api/24606079701240da8ef2ec93c6d6caf8/expenseData',obj)
-    .then(response=>{
-        showNewUsersOnScreen(response.data);
-        console.log(response);
-    })
-    .catch((err)=>{
-       console.log(err);
-    })
-
-}
-
-  window.addEventListener("DOMContentLoaded", ()=>{
-    axios.get('https://crudcrud.com/api/24606079701240da8ef2ec93c6d6caf8/expenseData')
-      .then((response)=>{
-          console.log(response);
-          for(var i=0;i<response.data.length;i++){
-              showNewUsersOnScreen(response.data[i]);
+let createdData;
+  window.addEventListener("DOMContentLoaded",createdData=async () => {
+    try{
+    const getData= await axios.get('https://crudcrud.com/api/448df21edc234a0b807c1dc631990592/expenseData')
+          console.log(getData);
+          for(var i=0;i<getData.data.length;i++){
+              showNewUsersOnScreen(getData.data[i]);
           }
-      })
-      .catch((err)=>{
-      console.log(err);
-      })
-  })
-
-
-function showNewUsersOnScreen(user){
-    if(localStorage.getItem(user._id)!==null){
-        removeUserFromScreen(_id)
         }
-    const parentNode= document.getElementById('listOfUsers');
-    const childHTMl= `<li id =${user._id}> ${user.amount}--${user.desc}--${user.category}
-        <button onclick=editUser('${user.amount}','${user.desc}','${user.category}','${user._id}')>Edit Expense</button>
-         <button onclick=deleteUser('${user._id}')>Delete Expense</button></li>`
-    parentNode.innerHTML= parentNode.innerHTML + childHTMl;
-    console.log(parentNode.innerHTML);
+        catch(err){
+            console.log("Something went wrong",err);
+        }
+      })
+createdData();
+
+async function deleteUser(_id) { 
+  
+  try{
+    const deletedData= await axios.delete(`https://crudcrud.com/api/448df21edc234a0b807c1dc631990592/expenseData/${_id}`)
+    removeUserFromScreen(_id)
+  }
+    catch(err){
+        console.log("Something went wrong",err);
+    }
+
 }
 
-function deleteUser(_id) {
-    axios.delete(`https://crudcrud.com/api/24606079701240da8ef2ec93c6d6caf8/expenseData/${_id}`)
-        .then((res)=>{
-            removeUserFromScreen(_id)
-        })
-        .catch((err)=>{
-            console.log(err);
-        })
-}
 function editUser(amount,desc,category,_id){
         document.getElementById("amount").value = amount;
         document.getElementById("desc").value = desc;
@@ -107,7 +97,21 @@ function removeUserFromScreen(_id){
     if(childToBeDeleted){
         parentNode.removeChild(childToBeDeleted);
     }
-}
+ }
+
+function showNewUsersOnScreen(user){
+    if(localStorage.getItem(user._id)!==null){
+        removeUserFromScreen(_id)
+        }
+    const parentNode= document.getElementById('listOfUsers');
+    const childHTMl= `<li id =${user._id}> ${user.amount} , ${user.desc} , ${user.category}
+        <button onclick=editUser('${user.amount}','${user.desc}','${user.category}','${user._id}')>Edit Expense</button>
+         <button onclick=deleteUser('${user._id}')>Delete Expense</button></li>`
+    parentNode.innerHTML= parentNode.innerHTML + childHTMl;
+    console.log(parentNode.innerHTML);
+  }
+
+
     </script>
     </body>
 </html>
